[package]
name = "rust"
version = "0.1.0"
authors = ["Redhwan Nacef <nacefredhwan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.126"
